--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+  "cookie-parser": "^1.4.6",
     "node-fetch": "^2.6.7",
     "ws": "^8.13.0"
   },
